@@ -5,6 +5,8 @@ Version 1.8.7
        show nested externals. (Stefan)
 - BUG: Issue #635: externals property not correctly
        converted to a relative url. (Stefan)
+- BUG: Issue #636: externals property dialog does not
+       handle multiple selections. (Stefan)
 
 Version 1.8.6
 - BUG: Issue #617: Checkbox size too big on Aero
